--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##MySQL database##
 spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
 spring.datasource.username=root
-spring.datasource.password=povilas1565
+spring.datasource.password=1234567qwe
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=@spring.profiles.active@
 spring.jpa.open-in-view=false
